工厂&门面&调停者

--- a/designPatterns/src/main/java/笔记.md
+++ b/designPatterns/src/main/java/笔记.md
@@ -1,11 +1,105 @@
-程序设计中，在一个类中尽可能少的声明成员变量，避免使类变得臃肿和复杂
-只有一个方法用到的变量，就写成参数的形式 ，如策略模式中的 策略对象，
-就可以作为参数传给实际调用的方法
+* 程序设计中，在一个类中尽可能少的声明成员变量，避免使类变得臃肿和复杂 只有一个方法用到的变量，就写成参数的形式 ，如策略模式中的
+  策略对象， 就可以作为参数传给实际调用的方法
 
-类的成员变量，都要进行封装，即采用private的写法，
-需要被多个实例同时访问的对象，定义成static类型
+* 类的成员变量，都要进行封装，即采用private的写法，
+* 需要被多个实例同时访问的对象，定义成static类型
+* 同样的代码先抽成方法，如果发现不同的类都可以复用该方法， 则再考虑实现一个类，类中声明该方法
+* 开闭原则：对新增开放，对修改关闭
+* interface和abstract class分别对应于什么场景下使用更合适一些？
+  > interface和abstract class区别在于interface约定的是务必要实现的方法和参数，强调规则的制定；abstract
+  class则在抽象的同时允许提供一些默认的行为，以达到代码复用的效果。例如定义一些基础、初始化以及类回收方法等。另外，还有一个常识性的区别，一个实现类（相对于抽象而言）可以实现多个interface，而只能继承一个abstract
+  class，在代码设计的过程中务必注意。
 
-同样的代码先抽成方法，如果发现不同的类都可以复用该方法，
-则再考虑实现一个类，类中声明该方法
+# 策略模式
 
-开闭原则：对新增开放，对修改关闭
+* 定义了一个接口和方法，并新建多个类实现接口中的方法，不算严格意义上的的策略模式，只能说是面向对象编程
+* 常规的策略模式：
+    * (1)抽象策略（Strategy）类：定义了一个公共接口，各种不同的算法以不同的方式实现这个接口，环境角色使用这个接口调用不同的算法，一般使用接口或抽象类实现。
+    * (2)具体策略（Concrete Strategy）类：实现了抽象策略定义的接口，提供具体的算法实现。
+    * (3)环境（Context）类：持有一个策略类的引用，最终给客户端调用。
+
+  除了上述的接口和实现类，通常还需要一个环境类，用来封装获取或者执行对应策略类的方法，
+  例如代码中的Sorter类，或者下面这种，而且可以定义实现类的map并结合spring的自动注入使用：
+  ```java 
+  class SortClient {
+  private SortingStrategy strategy;
+
+  public void setStrategy(SortingStrategy strategy) {
+  this.strategy = strategy;
+  }
+
+  public void sortArray(int[] array) {
+  strategy.sort(array);
+  }
+  }
+  ```
+* 进一步扩展：由于接口中，没有公共的方法实现，所以在策略模式中还可以加入抽象类，实现接口中的方法，封装一些公共逻辑，再由具体的策略类继承抽象类
+
+# 工厂模式
+
+## 简单工厂
+
+* 简单工厂，一个工厂生产多个产品
+* 可以通过实现movable接口，达到新增任意产品的目的
+* 优点：客户端与产品的创建分离，客户端不需要知道产品创建的逻辑，只需要消费该产品即可。
+* 缺点：工厂类集成了所有产品的创建逻辑，当工厂类出现问题，所有产品都会出现问题；还有当新增加产品都会修改工厂类，违背开闭原则
+
+## 工厂方法
+
+* 工厂方法，每个产品都有自己的工厂类
+* 通过实现movable接口，达到新增任意产品的目的
+* 通过新增对应的工厂类，使任意产品的新增过程定制化
+* 优点：更符合开闭原则，增加一个产品类，则只需要实现其他具体的产品类和具体的工厂类即可；符合单一职责原则，每个工厂只负责生产对应的产品
+* 缺点：增加一个产品，就需要实现对应的具体工厂类和具体产品类；每个产品需要有对应的具体工厂和具体产品类
+* 当各自的工厂类，继承一个公共的抽象工厂类时，工厂方法模式 就成了 产品族只有一个产品的 抽象工厂模式
+
+## 抽象工厂
+
+* 抽象工厂，侧重于产品族的概念，一组产品如Food，Weapon，Vehicle
+* 一个工厂生产一组产品，继承一个抽象的工厂
+* 不同产品族的产品继承各自的产品抽象类
+* 优点：1.当一个产品族中的多个对象被设计成一起工作时，它能保证客户端始终只使用同一个产品族中的对象。2.保证减少工厂类和具体产品的类添加。
+* 缺点：产品族扩展非常困难，要增加一个系列的某一产品，既要在抽象的 工厂和抽象产品里加代码，又要在具体的里面加代码。
+
+# 门面模式
+
+> 优点：
+> 1. 简化接口：
+     门面模式提供了一个统一的接口，隐藏了系统的复杂性，使得客户端只需要与一个简单的接口交互，而不必关心系统的内部细节。
+> 2. 降低耦合度：
+     ** 通过提供一个统一的门面接口，将客户端与子系统之间的耦合度降低。客户端只需依赖门面，而不需要直接与多个子系统进行交互，这有助于降低系统的耦合度。
+> 3. 提高可维护性
+     ** 由于客户端与子系统之间的关系通过门面进行管理，当系统内部发生变化时，只需要调整门面而不会影响到客户端。这有助于提高系统的可维护性。
+> 4. 更好的划分访问层次：
+     门面模式可以将系统划分为多个层次，每个层次通过门面提供的接口进行访问。这样可以更清晰地划分系统的职责和功能。
+
+> 缺点：
+> 1. 不符合开闭原则：
+     当系统需要新增功能或子系统时，可能需要修改门面类，这违反了开闭原则。因为门面类的变化可能会影响客户端。
+> 2. 可能引入性能问题：
+     门面模式的简化接口有时会导致性能问题，因为客户端只能通过门面提供的接口访问子系统，而不能直接调用子系统的细节方法。
+> 3. 可能隐藏过多细节：
+     过度使用门面模式可能导致系统的底层细节被隐藏得过于深入，使得开发人员无法直接访问或调整底层组件。
+> 4. 可能引入新的依赖关系：
+     引入门面模式可能会引入新的依赖关系，这意味着客户端将依赖于门面，而门面又依赖于子系统。这可能导致一系列的依赖关系链。
+
+# 调停者模式
+
+> 优点：
+> 1. 适当使用调停者模式可以较少使用静态的继承关系，使得具体同事类可以更加容易的被复用。
+> 2. 适当使用调停者模式可以避免同事对象之间的过度耦合，使得调停类与同事类可以相对独立的演化。
+> 3. 调停者模式将多对多的相互作用转化一对多的相互作用，使得对象之间的关系更加容易维护和理解。
+> 4. 调停者模式将对象的行为和协作抽象化，把对象在小尺度的行为上与其他对象的相互作用分开处理。
+
+> 缺点：
+> 1. 调停者模式降低了同事对象的复杂性，代价是增加了调停者类的复杂性。当然，在很多情况下，设置一个调停者并不比不设置一个调停者更好。
+> 2. 调停者类经常充满了各个具体同事类的关系协调代码，这种代码常常是不能复用的。因此，具体同事类的复用是以调停者类的不可复用为代价的。
+     > 显然，调停者模式为同事对象，而不是调停者对象提供了可扩展性，所以这个模式所提供的可扩展性是一种（向同事对象）倾斜的可扩展性。
+
+> 调停者模式的使用条件
+> * 不应当在责任划分混乱时使用
+> * 不应当对数据类和方法类使用
+
+> 正确理解封装
+> * 封装首先是行为，以及行为所涉及的状态的封装。行为与状态是不应当分割开来的。
+> * 调停者模式的用途是管理很多的对象的相互作用，以便使这些对象可以专注于自身的行为，而独立于其他的对象。
